# encrypt-pre-alpha

./: Cargo.toml  README.md  justfile
chains/solana/clients/rust/: Cargo.toml
chains/solana/clients/rust/src/: grpc.rs
chains/solana/clients/typescript/: package.json  tsconfig.json
chains/solana/clients/typescript/src/: grpc-web.ts  grpc.ts
chains/solana/dev/src/: tx_builder.rs
chains/solana/examples/_shared/: helpers.ts
chains/solana/examples/acl/e2e/: instructions.ts  main.ts
chains/solana/examples/acl/quasar/: Cargo.toml  Quasar.toml
chains/solana/examples/coin-flip/e2e/: instructions.ts  main.ts
chains/solana/examples/coin-flip/quasar/: Cargo.toml  Quasar.toml
chains/solana/examples/counter/e2e/: instructions.ts  main.ts
chains/solana/examples/counter/quasar/: Cargo.toml  Quasar.toml
chains/solana/examples/counter/quasar/src/: lib.rs
chains/solana/examples/cp-swap/e2e/: instructions.ts  main.ts
chains/solana/examples/cp-swap/pinocchio/: Cargo.toml
chains/solana/examples/cp-token/e2e/: instructions.ts  main.ts  spl-helpers.ts
chains/solana/examples/cp-token/pinocchio/: Cargo.toml
chains/solana/examples/pc-swap/e2e/: instructions.ts  main.ts  verified.ts
chains/solana/examples/pc-swap/pinocchio/: Cargo.toml
chains/solana/examples/pc-token/e2e/: instructions.ts  main.ts
chains/solana/examples/pc-token/pinocchio/: Cargo.toml
chains/solana/examples/vector-ops/pinocchio/: Cargo.toml
chains/solana/examples/vector-ops/pinocchio/src/: lib.rs
chains/solana/examples/vector-ops/pinocchio/tests/: litesvm.rs
chains/solana/program-sdk/quasar/: Cargo.toml
chains/solana/program-sdk/quasar/src/: accounts.rs  cpi.rs  lib.rs
chains/solana/test/src/: harness.rs  litesvm.rs
crates/encrypt-compute/src/: engine.rs  evaluator.rs  mock.rs  mock_crypto.rs
crates/encrypt-compute/tests/: cross_entry_and_reductions.rs  vector_ops_comprehensive.rs
crates/encrypt-dsl-compile/src/: lib.rs
crates/encrypt-dsl/src/: traits.rs
crates/encrypt-service/src/: requests.rs  sqlite_store.rs
crates/encrypt-types/: Cargo.toml
crates/encrypt-types/src/: encrypted.rs  identifier.rs  lib.rs  types.rs
docs/src/: SUMMARY.md  introduction.md
docs/src/dsl/: vectors.md
docs/src/examples/: overview.md
docs/src/examples/cp-swap/: 01-overview.md  02-program.md  03-testing.md
docs/src/examples/cp-token/: 01-overview.md  02-program.md  03-testing.md
docs/src/examples/pc-swap/: 01-overview.md  02-program.md  03-testing.md
docs/src/examples/pc-token/: 01-overview.md  02-program.md  03-testing.md
docs/src/examples/voting/: 04-react.md
docs/src/frameworks/: pinocchio.md  quasar.md
docs/src/getting-started/: installation.md
docs/src/reference/: events.md
(+22 files in other folders)
