[package]
name = "encrypt-types"
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[features]
default = ["bcs-serde"]
bcs-serde = ["dep:bcs", "dep:serde"]

[dependencies]
bcs = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
