[package]
name = "encrypt-quasar"
version = "0.1.0"
authors = ["dWallet Labs, Ltd. <dev@dwalletlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

[lib]
crate-type = ["lib"]

[dependencies]
encrypt-types = { path = "../../../../crates/encrypt-types", default-features = false }
encrypt-solana-types = { path = "../types" }
quasar-lang = { git = "https://github.com/blueshift-gg/quasar" }
solana-instruction-view = { version = "2.0.0", features = ["cpi"] }
