[package]
name = "confidential-vector-ops"
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
encrypt-types = { workspace = true }
encrypt-dsl = { package = "encrypt-solana-dsl", path = "../../../program-sdk/dsl" }
encrypt-pinocchio = { workspace = true }
pinocchio = { workspace = true }
pinocchio-system = { workspace = true }

[dev-dependencies]
encrypt-solana-test = { workspace = true }
encrypt-types = { workspace = true }
encrypt-compute = { workspace = true }
encrypt-dsl = { package = "encrypt-solana-dsl", path = "../../../program-sdk/dsl" }
solana-sdk = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
mock = []
